--- a/App.config
+++ b/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Shop_AccessDB_Save_Update_Delete_Search.Properties.Settings.Database_Shop_ProjectConnectionString"
+            connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\temp1\Database_Shop_Project.accdb"
+            providerName="System.Data.OleDb" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
