--- a/Shop_AccessDB_Save_Update_Delete_Search.csproj
+++ b/Shop_AccessDB_Save_Update_Delete_Search.csproj
@@ -49,6 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database_Shop_ProjectDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Database_Shop_ProjectDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DBMS_Template.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -97,6 +102,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Database_Shop_ProjectDataSet.xsc">
+      <DependentUpon>Database_Shop_ProjectDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="Database_Shop_ProjectDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Database_Shop_ProjectDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Database_Shop_ProjectDataSet.xss">
+      <DependentUpon>Database_Shop_ProjectDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
